--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ name = "gametrack-data"
 version = "0.1.0"
 readme = "README.md"
 authors = [{ name = "Joshua Peek" }]
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Typing :: Typed",
 ]
