--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,10 @@ classifiers = [
 [project.scripts]
 gametrack-data = "gametrack_data:main"
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "mypy>=1.0.0,<2.0",
-    "ruff>=0.5.0",
+    "ruff>=0.11.0",
 ]
 
 [tool.ruff.lint]
