--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,6 @@ jobs:
 
       - name: Generate metrics
         run: |
-          uv run gametrack-data \
+          uv run gametrack-data metrics \
             --input-filename data/games.csv \
             --metrics-filename data/metrics.prom
