--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "gametrack-data"
-version = "1.1.0"
+version = "1.1.1"
 readme = "README.md"
 authors = [{ name = "Joshua Peek" }]
 requires-python = ">=3.9"
@@ -27,10 +27,7 @@ classifiers = [
 gametrack-data = "gametrack_data:main"
 
 [dependency-groups]
-dev = [
-    "mypy>=1.0.0,<2.0",
-    "ruff>=0.11.0",
-]
+dev = ["mypy>=1.0.0,<2.0", "ruff>=0.11.0"]
 
 [tool.ruff.lint]
 extend-select = ["I", "UP"]
