--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      cooldown:
+        default-days: 14
     ignore:
       - dependency-name: "ruff"
         update-types: ["version-update:semver-patch"]
@@ -12,3 +14,5 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      cooldown:
+        default-days: 14
