--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,39 @@
 [build-system]
-requires = ["hatchling"]
 build-backend = "hatchling.build"
+requires = [ "hatchling" ]
 
 [project]
 name = "gametrack-data"
 version = "1.1.1"
 readme = "README.md"
-authors = [{ name = "Joshua Peek" }]
+authors = [ { name = "Joshua Peek" } ]
 requires-python = ">=3.9"
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Typing :: Typed",
 ]
+
+scripts.gametrack-data = "gametrack_data:main"
+
+[dependency-groups]
+dev = [ "mypy>=1,<2", "ruff>=0.11" ]
 
 [tool.hatch.build.targets.wheel.force-include]
 "gametrack_data.py" = "gametrack_data/__init__.py"
 
-[project.scripts]
-gametrack-data = "gametrack_data:main"
+[tool.ruff]
+lint.extend-select = [ "I", "UP" ]
 
-[dependency-groups]
-dev = ["mypy>=1.0.0,<2.0", "ruff>=0.11.0"]
-
-[tool.ruff.lint]
-extend-select = ["I", "UP"]
+[tool.pyproject-fmt]
+indent = 4
 
 [tool.mypy]
 strict = true
