--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ requires = [ "hatchling" ]
 name = "gametrack-data"
 version = "1.1.1"
 readme = "README.md"
+license = "MIT"
+license-files = [ "LICENSE" ]
 authors = [ { name = "Joshua Peek" } ]
 requires-python = ">=3.9"
 classifiers = [
