--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -21,7 +20,6 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
     "Typing :: Typed",
 ]
-
 scripts.gametrack-data = "gametrack_data:main"
 
 [dependency-groups]
@@ -30,8 +28,8 @@ dev = [
     "ruff>=0.4,<2",
 ]
 
-[tool.hatch.build.targets.wheel.force-include]
-"gametrack_data.py" = "gametrack_data/__init__.py"
+[tool.hatch]
+build.targets.wheel.force-include."gametrack_data.py" = "gametrack_data/__init__.py"
 
 [tool.ruff]
 lint.extend-select = [ "I", "UP" ]
